Fixed bugs found by findbugs.
git-svn-id: file:///home/svn/shoola-omero/trunk@6038 6f2cb1de-eb0d-0410-b157-e593188b5901